# json-web-server

./: .env  README.md  docker-compose.yml  test.csv
api/: Cargo.toml
api/src/: lib.rs
cli/: Cargo.toml
cli/src/: main.rs
server/: Cargo.toml
server/migrations/2022-05-16-170804_crate_lgos/: down.sql  up.sql
server/src/: db.rs  handlers.rs  main.rs  model.rs
