[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.137", features = ["derive"] }

# ある依存について詳細に設定したい場合はサブセクションを書くと設定できる
[dependencies.chrono]
features = ["serde"]
version = "0.4"
