[package]
name = "cli"
version = "0.1.0"
edition = "2021"
authors = ["shinobu52 <shinobu_yamaguchi@outlook.jp>"]
description = "CLI for web server requests."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api = { path = "../api" }
clap = { version = "3.1.18", features = ["derive"] }
serde = { version = "1.0.137", features = ["derive"] }
reqwest = { version = "0.11.10", features = ["blocking", "json"] }
csv = "1.1.6"
serde_json = "1.0.81"

# ある依存について詳細に設定したい場合はサブセクションを書くと設定できる
[dependencies.chrono]
features = ["serde"]
version = "0.4"
